# conan_qt_example

./: CMakeLists.txt  conanfile.txt  main.cpp
